// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    {
  "variables": {},
  "loading": true,
  "networkStatus": 1
}
  </Text>
</View>
`;

exports[`app renders correctly 2`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    {
  "variables": {},
  "loading": false,
  "networkStatus": 7,
  "hello": "Hello world!"
}
  </Text>
</View>
`;
